<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_mbw_menu_bg"
    android:orientation="horizontal" >
  
    <ImageView
        android:id="@+id/mb_background"
        android:layout_width="585dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="187.5dp"
        android:layout_marginTop="202.5dp"
        android:scaleType="fitXY"
        android:src="@drawable/select_icon_bg" />

    <LinearLayout	        
		android:layout_width="585dp"
		android:layout_height="150dp"			    
		android:layout_marginLeft="187.5dp"
		android:layout_marginTop="202.5dp"
		android:id="@+id/mb_linearlayout"
		android:orientation="horizontal">	   
		  		
		<RelativeLayout 
		    	android:layout_width="146.25dp"
	    		android:layout_height="150dp"  		
	    		>	    	
		    <ImageButton 
	   		android:id="@+id/mb_photo_img"
	   		android:layout_centerVertical="true"   	
	    	android:layout_width="fill_parent"
	    	android:layout_height="117dp"	    	
	    	android:src="@drawable/select_icon_photo_focus"
	    	android:scaleType="centerInside"
	    	android:background="#00000000"/>
		    <TextView 
		    android:layout_marginLeft="0dp"
		    android:layout_marginTop="116.25dp"
	    	android:layout_width="fill_parent"
	    	android:layout_height="18.75dp"
	    	android:textColor="#f5f5f5"
	    	android:gravity="center"
	    	android:textSize="15dp"
	    	android:text="@string/title_photo"/>
		</RelativeLayout>
		
		<RelativeLayout 
		    	android:layout_width="146.25dp"
	    		android:layout_height="150dp"	    		
	    		>	    	
		    <ImageButton 
	   		android:id="@+id/mb_music_img"
	   		android:layout_centerVertical="true"   	
	    	android:layout_width="fill_parent"
	    	android:layout_height="117dp"	    	
	    	android:src="@drawable/select_icon_music_unfocus"
	    	android:scaleType="centerInside"
	    	android:background="#00000000"/>
		    <TextView 
		    android:layout_marginLeft="0dp"
		    android:layout_marginTop="116.25dp"
	    	android:layout_width="fill_parent"
	    	android:layout_height="18.75dp"
	    	android:textColor="#f5f5f5"
	    	android:gravity="center"
	    	android:textSize="15dp"
	    	android:text="@string/title_music"/>
		</RelativeLayout>
		
		<RelativeLayout 
		    	android:layout_width="146.25dp"
	    		android:layout_height="150dp"	    		
	    		>	    	
		    <ImageButton 
	   		android:id="@+id/mb_videos_img"
	   		android:layout_centerVertical="true"   	
	    	android:layout_width="fill_parent"
	    	android:layout_height="117dp"	    	
	    	android:src="@drawable/select_icon_video_unfocus"
	    	android:scaleType="centerInside"
	    	android:background="#00000000"/>
		    <TextView 
		    android:layout_marginLeft="0dp"
		    android:layout_marginTop="116.25dp"
	    	android:layout_width="fill_parent"
	    	android:layout_height="18.75dp"
	    	android:textColor="#f5f5f5"
	    	android:gravity="center"
	    	android:textSize="15dp"
	    	android:text="@string/title_movie"/>
		</RelativeLayout>
		
		<RelativeLayout 
		    	android:layout_width="146.25dp"
	    		android:layout_height="150dp"	    		
	    		>	    	
		    <ImageButton 
	   		android:id="@+id/mb_setting_img"
	   		android:layout_centerVertical="true"   	
	    	android:layout_width="fill_parent"
	    	android:layout_height="117dp"	    	
	    	android:src="@drawable/select_icon_setting_unfocus"
	    	android:scaleType="centerInside"
	    	android:background="#00000000"/>
		    <TextView 
		    android:layout_marginLeft="0dp"
		    android:layout_marginTop="116.25dp"
	    	android:layout_width="fill_parent"
	    	android:layout_height="18.75dp"
	    	android:textColor="#f5f5f5"
	    	android:gravity="center"
	    	android:textSize="15dp"
	    	android:text="@string/title_setup"/>
		</RelativeLayout>		
		
	</LinearLayout> 
	
    <ImageView
        android:id="@+id/mb_focus"
        android:layout_width="191.25dp"
        android:layout_height="195dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="180dp"
        android:scaleType="fitXY"
        android:src="@drawable/select_icon_focus" />

    <RelativeLayout
	            android:id="@+id/mb_guide_bar"
	            android:layout_width="960dp"
	            android:layout_height="34.5dp"
	            android:layout_marginLeft="0dp"
	            android:layout_marginTop="505.5dp"
	            android:background="@drawable/list_common_bg_bottom">
				<RelativeLayout
		            android:id="@+id/guide_left"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="395dp">
		    		<TextView
			            android:id="@+id/mb_guide_features"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center"
			            android:textColor="#0f265f"
			            android:textSize="15sp"
			            android:text="@string/guide_features" />
		    		<TextView
			            android:id="@+id/mb_guide_quick"
			            android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:paddingLeft = "4dp"
		                android:paddingRight = "4dp"
		                android:layout_marginLeft="6dp"
		                android:layout_toRightOf="@id/mb_guide_features"
			            android:background="@drawable/guide_icon_bg"
			            android:gravity="center"
			            android:text="@string/guide_quick"
			            android:textColor="@color/white" 
			            android:textSize="15sp" />
	            </RelativeLayout>
	        	<RelativeLayout
		            android:id="@+id/guide_right"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="21dp"
		            android:layout_toRightOf="@id/guide_left" >
		            <TextView
		                android:id="@+id/mb_guide_enter"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:gravity="center"
		                android:text="@string/guide_enter"
		                android:textColor="#0f265f"
		                android:textSize="15sp" />
	            	<TextView
		                android:id="@+id/mb_guide_ok"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:paddingLeft = "4dp"
		                android:paddingRight = "4dp"
		                android:layout_marginLeft="6dp"
		                android:layout_toRightOf="@id/mb_guide_enter"
		                android:background="@drawable/guide_icon_bg"
		                android:gravity="center"
		                android:text="@string/guide_ok"
		                android:textColor="@color/white"
		                android:textSize="15sp" />
	        	</RelativeLayout>
	        
	    </RelativeLayout>

</RelativeLayout>