<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    android:background="@drawable/list_common_bg"    tools:context=".VideoBrowser" >        <RelativeLayout        android:layout_width="match_parent"        android:layout_height="match_parent" >	     <RelativeLayout	            android:id="@+id/bg_bottom"	            android:layout_width="1280dp"	            android:layout_height="46dp"	            android:layout_marginLeft="0dp"	            android:layout_marginTop="674dp"	            android:background="@drawable/list_common_bg_bottom">	        <TextView	            android:id="@+id/guide_ok"	            android:layout_width="46dp"	            android:layout_height="28dp"	            android:layout_marginLeft="332.67dp"	            android:layout_marginTop="9dp"	            android:background="@drawable/guide_icon_bg"	            android:gravity="center"	            android:text="@string/guide_ok"	            android:textColor="@color/white" />	        <TextView	            android:id="@+id/guide_enter"	            android:layout_width="35dp"	            android:layout_height="28dp"	            android:layout_marginLeft="383.67dp"	            android:layout_marginTop="9dp"	            android:gravity="center"	            android:textColor="#0f265f"	            android:text="@string/guide_enter" />	        <TextView	            android:id="@+id/guide_quick"	            android:layout_width="70dp"	            android:layout_height="28dp"	            android:layout_marginLeft="552dp"	            android:layout_marginTop="9dp"	            android:background="@drawable/guide_icon_bg"	            android:gravity="center"	            android:text="@string/guide_quick"	            android:textColor="@color/white" />	        <TextView	            android:id="@+id/guide_features"	            android:layout_width="60dp"	            android:layout_height="28dp"	            android:layout_marginLeft="627dp"	            android:layout_marginTop="9dp"	            android:gravity="center"	            android:textColor="#0f265f"	            android:text="@string/guide_features" />	        <TextView	            android:id="@+id/guide_p"	            android:layout_width="28dp"	            android:layout_height="28dp"	            android:layout_marginLeft="807dp"	            android:layout_marginTop="9dp"	            android:background="@drawable/guide_icon_bg"	            android:gravity="center"	            android:text="@string/guide_p"	            android:textColor="@color/white" />	        <TextView	            android:id="@+id/guide_page"	            android:layout_width="wrap_content"	            android:layout_height="28dp"	            android:layout_marginLeft="840dp"	            android:layout_marginTop="9dp"	            android:gravity="center"	            android:textColor="#0f265f"	            android:text="@string/guide_page" />	    </RelativeLayout>	    <RelativeLayout	            android:id="@+id/resume_play_help_bar"	            android:layout_width="1280dp"	            android:layout_height="46dp"	            android:layout_marginLeft="0dp"	            android:layout_marginTop="674dp"	            android:visibility="invisible"	            android:background="@drawable/list_common_bg_bottom">	        	<TextView	            android:id="@+id/guide_arrows"	            android:layout_width="46dp"	            android:layout_height="28dp"	            android:layout_marginLeft="502.67dp"	            android:layout_marginTop="9dp"	            android:background="@drawable/guide_csl_rl"	            android:gravity="center" />	     		<TextView	            android:id="@+id/guide_select"	            android:layout_width="wrap_content"	            android:layout_height="28dp"	            android:layout_marginLeft="553.67dp"	            android:layout_marginTop="9dp"	            android:gravity="center"	            android:textColor="#0f265f"	            android:text="@string/guide_select" />	   			<TextView	            android:id="@+id/guide_ok1"	            android:layout_width="46dp"	            android:layout_height="28dp"	            android:layout_marginLeft="670dp"	            android:layout_marginTop="9dp"	            android:background="@drawable/guide_icon_bg"	            android:gravity="center"	            android:text="@string/guide_ok"	            android:textColor="@color/white" />	        	<TextView	            android:id="@+id/guide_enter1"	            android:layout_width="wrap_content"	            android:layout_height="28dp"	            android:layout_marginLeft="727.67dp"	            android:layout_marginTop="9dp"	            android:gravity="center"	            android:textColor="#0f265f"	            android:text="@string/guide_enter" />	    </RelativeLayout>	    <ImageView	        android:id="@+id/focus"	        android:layout_width="670dp"	        android:layout_height="45.33dp"	        android:layout_marginLeft="0dp"	        android:layout_marginTop="0dp"	        android:scaleType="fitCenter"	        android:src="@drawable/list_common_item_focus"	        android:visibility="gone" />	    <SurfaceView        	android:id="@+id/video"        	android:layout_width="352dp"        	android:layout_height="198dp"        	android:layout_marginLeft="870dp"            android:layout_marginTop="190dp"            android:scaleType="fitCenter" />	    <ProgressBar        	android:id="@+id/video_progress"       	 	style="?android:attr/progressBarStyleHorizontal"        	android:layout_width="360dp"        	android:layout_height="6dp"        	android:layout_marginLeft="870dp"        	android:layout_marginTop="490dp"        	android:progressDrawable="@drawable/listprocess"/>	    <TextView	        android:id="@+id/dir_or_video_name"	        android:layout_width="360dp"	        android:layout_height="36dp"	        android:layout_marginLeft="870dp"	        android:layout_marginTop="400dp"	        android:gravity="left|center_vertical"	        android:shadowColor="#aaaaaa"	        android:textColor="#0f265f"	        android:singleLine="true"	        android:textSize="16sp" />	    <ImageView	        android:id="@+id/loadingIcon"	        android:layout_width="36dp"	        android:layout_height="36dp"	        android:layout_marginLeft="1206dp"	        android:layout_marginTop="36dp"	        android:src="@drawable/others_icons_loading" />	    <TextView	        android:id="@+id/video_duration_tag"	        android:layout_width="16dp"	        android:layout_height="14dp"	        android:layout_marginLeft="1040dp"	        android:layout_marginTop="522dp"	        android:gravity="center"	        android:text="@string/gapline"	        android:textColor="@color/black"	        android:textSize="13sp" />	    <ImageView	        android:id="@+id/image_folder"	        android:layout_width="352dp"	        android:layout_height="198dp"	        android:layout_marginLeft="870dp"	        android:layout_marginTop="190dp" />	    <ImageView	        android:id="@+id/video_list_icon_video"	        android:layout_width="wrap_content"	        android:layout_height="wrap_content"	        android:layout_marginLeft="20dp"	        android:layout_marginTop="2dp"	        android:src="@drawable/video_list_icon_video1" />	    <TextView	        android:id="@+id/Top_VideoText"	        android:layout_width="103dp"	        android:layout_height="38dp"	        android:layout_marginLeft="113dp"	        android:layout_marginTop="30dp"	        android:text="@string/title_movie"	        android:textColor="#0f265f"	        android:textSize="30dp" />	    <ImageView	        android:id="@+id/video_list_icon_line"	        android:layout_width="680dp"	        android:layout_height="wrap_content"	        android:layout_marginLeft="90dp"	        android:layout_marginTop="115dp"	        android:src="@drawable/list_common_icon_line" />	    <ImageView	        android:id="@+id/video_list_icon_folder"	        android:layout_width="wrap_content"	        android:layout_height="wrap_content"	        android:layout_marginLeft="84dp"	        android:layout_marginTop="78dp"	        android:src="@drawable/list_common_icon_folder" />	    <TextView	        android:id="@+id/video_path_top"	        android:layout_width="480dp"	        android:layout_height="30dp"	        android:layout_marginLeft="140dp"	        android:layout_marginTop="85dp"	        android:shadowColor="#aaaaaa"	        android:singleLine="true"	        android:textColor="#0f265f"	        android:textSize="20sp"/>	    <TextView	        android:id="@+id/video_list_total_time_top"	        android:layout_width="200dp"            android:layout_height="30dp"            android:layout_marginLeft="570dp"            android:layout_marginTop="82dp"            android:gravity="right"            android:shadowColor="#aaaaaa"            android:singleLine="true"            android:text="@string/totaltime"            android:textColor="#0f265f"            android:textSize="20sp" />	    <TextView	        android:id="@+id/video_list_index_info"	        android:layout_width="120dp"	        android:layout_height="30dp"	        android:layout_marginLeft="800dp"	        android:layout_marginTop="85dp"	        android:gravity="left"	        android:shadowColor="#aaaaaa"	        android:textColor="#0f265f"	        android:textSize="20sp"/>	    <ListView	        android:id="@+id/video_list"	        android:layout_width="680dp"	        android:layout_height="554dp"	        android:layout_marginLeft="90dp"	        android:layout_marginTop="120dp"	        android:dividerHeight="0.67dp"	        android:listSelector="@drawable/selector_list_background"	        android:scrollbars="none" />	    <ImageView	        android:id="@+id/video_list_page_up"	        android:layout_width="wrap_content"	        android:layout_height="wrap_content"	        android:layout_marginLeft="788dp"	        android:layout_marginTop="130dp"	        android:scaleType="fitCenter"	        android:src="@drawable/list_common_icon_up" />	    <ImageView	        android:id="@+id/video_list_page_down"	        android:layout_width="wrap_content"	        android:layout_height="wrap_content"	        android:layout_marginLeft="788dp"	        android:layout_marginTop="630dp"	        android:scaleType="fitCenter"	        android:src="@drawable/list_common_icon_down" />	    <ImageView	        android:id="@+id/imgRepeat"	        android:layout_width="30dp"	        android:layout_height="30dp"	        android:layout_marginLeft="1169dp"	        android:layout_marginTop="521dp"	        android:background="#00000000"	        android:scaleType="fitCenter"	        android:src="@drawable/photo_repeat_all_on" />	    <TextView	        android:id="@+id/date"	        android:layout_width="360dp"	        android:layout_height="36dp"	        android:layout_marginLeft="870dp"	        android:layout_marginTop="450dp"	        android:gravity="left|center_vertical"	        android:shadowColor="#aaaaaa"	        android:singleLine="true"	        android:textColor="#0f265f"	        android:textSize="16sp" />	    	    <TextView	        android:id="@+id/video_hasplayed"	        android:layout_width="wrap_content"	        android:layout_height="wrap_content"	        android:layout_marginLeft="975dp"	        android:layout_marginTop="520dp"	        android:textColor="#0f265f"	        android:textSize="16sp" />	    <TextView	        android:id="@+id/video_duration"	        android:layout_width="wrap_content"	        android:layout_height="wrap_content"	        android:layout_marginLeft="1054dp"	        android:layout_marginTop="520dp"	        android:textColor="@color/black"	        android:textSize="16sp" />    </RelativeLayout></LinearLayout>